# LonersMafia-Backend-Public

./: .gitignore  pyproject.toml  readme.md
src/: manage.py
src/apps/mafia/: admin.py  apps.py  consumers.py  models.py  serializers.py  views.py
src/apps/privacy_terms/: apps.py
src/apps/promoted/: apps.py
src/apps/user/: models.py  serializers.py  signals.py  views.py
src/apps/utils/: permissions.py
src/loner/: asgi.py  settings.py  urls.py  wsgi.py
